<resources>
    <string name="app_name">DuckHunt</string>
    <string name="start_game">Iniciar juego</string>
    <string name="nick_hint">Nombre de usuario</string>
    <string name="select_timer">Selecciona tiempo</string>
    <string name="retry">RETRY?</string>
    <string name="exit">Salir</string>
    <string name="game_over">GAME OVER</string>
    <string name="title_activity_ranking">RankingActivity</string>
    <string name="go_ranking">Ver ranking</string>
    <string name="ranking">Ranking</string>
</resources>
