<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.activity.LoginActivity"
    android:background="@drawable/bg_game">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:src="@drawable/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/nick_hint"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@color/grey"
        android:textColorLink="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_game"
        app:layout_constraintEnd_toEndOf="@+id/editTextUserName"
        app:layout_constraintStart_toStartOf="@+id/editTextUserName"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/buttonTimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/select_timer"
        app:layout_constraintEnd_toEndOf="@+id/buttonStart"
        app:layout_constraintStart_toStartOf="@+id/buttonStart"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart"
        android:backgroundTint="@android:color/white"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/buttonGoRanking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/go_ranking"
        app:layout_constraintEnd_toEndOf="@+id/buttonTimer"
        app:layout_constraintStart_toStartOf="@+id/buttonTimer"
        app:layout_constraintTop_toBottomOf="@+id/buttonTimer"
        android:backgroundTint="@android:color/white"
        android:textColor="@color/colorPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>