<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_game"
    android:padding="16dp"
    tools:context=".ui.activity.GameActivity">


    <ImageView
        android:id="@+id/imageViewDuck"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/duck"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="50dp" />

    <ImageView
        android:id="@+id/imageViewCounter"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/duck_hunt_logo" />

    <TextView
        android:id="@+id/textViewCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewCounter"
        app:layout_constraintStart_toEndOf="@+id/imageViewCounter"
        app:layout_constraintTop_toTopOf="@+id/imageViewCounter" />

    <TextView
        android:id="@+id/textViewDucks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="UserName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCounter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewCounter" />

    <ImageView
        android:id="@+id/imageViewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDucks"
        app:layout_constraintEnd_toStartOf="@+id/textViewTimer"
        app:layout_constraintTop_toTopOf="@+id/textViewDucks"
        app:srcCompat="@drawable/ic_timer" />

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="60s"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewTimer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutRetry"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="128dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewDucks">

        <TextView
            android:id="@+id/textViewGameOver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/game_over"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewFinal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRetry" />

        <Button
            android:id="@+id/buttonRetry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/retry"
            android:textColor="@android:color/white"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/textViewFinal"
            app:layout_constraintTop_toBottomOf="@+id/textViewGameOver" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:text="@string/ranking"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/buttonRetry"
            app:layout_constraintEnd_toEndOf="@+id/textViewFinal" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>